# axum_script

./: .gitignore  Cargo.toml  LICENSE  README.md  prevmain.rs  run_tests.sh
src/: extensions.rs  main.rs  routing.rs  runtime.js  sqltojson.rs  worker_pool.rs
src/extensions/: database.js  database.rs  datacache.js  datacache.rs
src/testapp/: setup.js
testapp/: setup.js
tests/: other.js  setup.js  test.js
