[package]
name = "axum_script"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["json", "tokio", "http1", "matched-path"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["raw_value"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
deno_core = "0.283.0"
v8 = { version = "0.92.0", default-features = false }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "sqlite", "postgres", "json" ] }
chrono = "0.4.38"
futures = "0.3.30"

